--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+     "start": "node index.js",
+     "fix": "standard --fix"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +22,7 @@
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "random-id": "^1.0.4",
+    "standard": "^16.0.3",
     "validator": "^13.5.2"
   }
 }
