--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ffmpeg": "0.0.4",
     "fluent-ffmpeg": "^2.1.2",
     "fs": "0.0.1-security",
+    "get-video-duration": "^3.0.2",
     "lodash": "^4.17.20",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
